# halina

./: .gitignore  Dockerfile  README.md  definitions.py  docker-compose.yml  halina.service  pyproject.toml  update_halina
configuration/: default_settings.toml  sample_settings.toml
src/: configuration.py
src/halina/: asyncio_util_functions.py  date_utils.py  email_rapport_service.py  file_rapport_service.py  main.py  nats_connection_service.py  service.py  service_communication.py  service_nats_dependent.py  service_shared_data.py  test.py
src/halina/email_rapport/: chart_builder.py  email_builder.py  email_sender.py  email_template.html  obserwation_chart_builder.py  power_data_collector.py  telescope_data_collector.py  weather_chart_builder.py  weather_data_collector.py
src/halina/email_rapport/data_collector_classes/: data_object.py  data_type_fits.py  fwhm_point.py  object_chart_point.py  observation_chart_data.py  power_point.py  range_chart_point.py  weather_point.py
src/halina/email_rapport/resources/: email_template.html  email_template_new.html
src/halina/file_raport/: file_rapport_creator.py  harvester_file_rapport.py
src/simulator/: README.md  data_publisher.py  download.json  main.py  raw.json  weather.json
tests/: run_tests.py  test.py
tests/halina/: test_email_rapport_service.py
tests/halina/email_rapport/: test_email_builder.py  test_email_sender.py  test_telescope_data_collector.py
tests/halina_test/: test_email_rapport_service.py
tests/halina_test/email_rapport/: test_email_builder.py  test_telescope_data_collector.py
tests/mock/: raw.json
tests/resources/: download.json  zdf.json
