[tool.poetry]
name = "halina"
version = "0.1.1"
description = "Heuristic Algorithmic Library..."
authors = []
readme = "README.md"
packages = [{include = "halina", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
serverish = {version="^1.1.1", extras=["messenger"]}
aiosmtplib = "^3.0.1"
aiohttp = "^3.9.5"

aiofiles = "^24.1.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
simulator = "simulator.main:run"
