[tool.poetry]
name = "halina"
version = "0.1.10"
description = "Heuristic Algorithmic Library..."
authors = []
readme = "README.md"
packages = [{include = "halina", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
serverish = {version="^1.1.1", extras=["messenger"]}
aiosmtplib = "^3.0.1"
aiohttp = "^3.9.5"
pyaraucaria = {git = "https://github.com/araucaria-project/pyaraucaria.git"}
jinja2 = "^3.1.4"
aiofiles = "^24.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
services = "src.halina.main:main"
simulator = "simulator.main:run"
