[tool.poetry]
name = "halina"
version = "0.1.15"
description = "Heuristic Algorithmic Library..."
authors = []
readme = "README.md"
packages = [
    {include = "halina", from = "src"},
    {include = "tests" }]

[tool.poetry.dependencies]
python = "^3.10"
serverish = {version="^1.1.1", extras=["messenger"]}
aiosmtplib = "^3.0.1"
aiohttp = "^3.9.5"
pyaraucaria = {git = "https://github.com/araucaria-project/pyaraucaria.git"}
jinja2 = "^3.1.4"
aiofiles = "^24.1.0"
dynaconf = "^3.2.6"
plotly = "^5.24.0"
kaleido = "0.2.1"  # library to convert ploply chart to static png is using by plotly library and never called in code !

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
services = "src.halina.main:main"
simulator = "simulator.main:run"
tests = "tests.run_tests:main"
